Add UpdateContact FE Functionality
Update Contact will now have FE functionality with a pop up modal UI. Remove some unnecessary HTML displayed text (originally for debug purposes)

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,3 +210,7 @@ img:hover {
 	font-family: 'Roboto', sans-serif;
 	font-weight: bold;
 }
+
+/*
+    Styling Section for Update Contact Modal Box
+*/
