--- a/css/styles.css
+++ b/css/styles.css
@@ -214,3 +214,22 @@ img:hover {
 /*
     Styling Section for Update Contact Modal Box
 */
+.updateModal {
+    height: auto;   /* Test This*/
+    background: #5bcdcd;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
+#userName {
+    color: #F5F5DC; /*Beige*/
+}
+
+#registerResult {
+    color: #F5F5DC; /*Beige*/
+}
+
+#addResult {
+    color: #F5F5DC; /*Beige*/;
+}
